# scim2-tester

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yaml
doc/: changelog.rst  conf.py  contributing.rst  reference.rst  tutorial.rst
scim2_tester/: __init__.py  checker.py  filling.py  resource.py  resource_types.py  schemas.py  service_provider_config.py  utils.py
tests/: conftest.py  test_config.py  test_network.py  test_random_url.py  test_resource.py  test_resource_types.py  test_schemas.py  test_scim2_server.py
